samples/_failures_safe/1761424347_426652_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1451b25e.c: In function ‘main’:
./samples/SAFE/__tmp_1451b25e.c:157:16: error: missing terminating " character
  157 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_1451b25e.c:157:9: error: expected expression at end of input
  157 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_1451b25e.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1451b25e.c:157:9: error: expected declaration or statement at end of input
